--- a/templates/layouts/main.gohtml
+++ b/templates/layouts/main.gohtml
@@ -28,7 +28,7 @@
                             <li>{{link (call .ToURL "home") "Dashboard" .Path}}</li>
                             <li>{{link (call .ToURL "about") "About" .Path}}</li>
                             <li>{{link (call .ToURL "contact") "Contact" .Path}}</li>
-                            <li>{{link (call .ToURL "tramite.show") "Tramite" .Path}}</li>
+                            <li>{{link (call .ToURL "tramite.new") "Tramite" .Path}}</li>
                         </ul>
 
                         <p class="menu-label">Account</p>
